# ChangeLog for sys-boot/calcboot
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calcboot-3.86.5 (12 Dec 2011)

  12 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calcboot-3.86.5.ebuild:
  Update for feature

*calcboot-3.86.4 (01 Dec 2011)

  01 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calcboot-3.86.4.ebuild:
  Fix work with pxelinux

  02 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calcboot-3.86.3.ebuild:
  Unmask calcboot.

*calcboot-3.86.3 (01 Jun 2011)

  01 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calcboot-3.86.3.ebuild:
  Add splash for grub2.

  22 Dec 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> calcboot-4.02.1.ebuild:
  Mask calcboot-4.02.1 for support unetbootin 494

*calcboot-3.86.0 (17 Aug 2010)

  17 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calcboot-3.86.0.ebuild, +files/syslinux-3.86-nopie.patch:
  Add new calcboot. New backscreen for grub. Add syslinux-3.86.

  01 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calcboot-3.75.4-r1.ebuild, calcboot-3.82.0-r1.ebuild,
  calcboot-3.83.0.ebuild:
  Changed homepage.

  27 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  calcboot-3.75.4-r1.ebuild, calcboot-3.82.0-r1.ebuild,
  calcboot-3.83.0.ebuild:
  Change description of calcboot.

*calcboot-3.83.0 (24 Nov 2009)

  24 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calcboot-3.83.0.ebuild:
  Added calcmenu.c32 module for syslinux-3.83

*calcboot-3.82.0-r1 (24 Nov 2009)

  24 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  -calcboot-3.82.0.ebuild, +calcboot-3.82.0-r1.ebuild, +metadata.xml:
  Fix depend for ebuild of calcboot.
