@@ -10,6 +10,7 @@ DIST calcboot-3.86.2.tar.bz2 45770 RMD160 4e456cec5b6c50275dfb2f071b0caf0fbe17f2
 DIST calcboot-3.86.3.tar.bz2 53663 RMD160 d332a0fb74bebdbdda4dc69283b53327b4e99a9e SHA1 f354e186c39d3e10a3cad225937d08f9f61f711e SHA256 cfe6e4b81263d02cf46e12a76f3f333d3da7b4941f3295082bd87d77a7be35e9
 DIST calcboot-3.86.4.tar.bz2 53713 RMD160 5d46c777849f51e18e3fae9eae1bc36983a18947 SHA1 656a33e301622f6fdaeb82db25cf0660d9e89a16 SHA256 3f63336d156712707fb2b83612a3dbc0cc26986d670ddb35f6a57b43b2f9de88
 DIST calcboot-3.86.5.tar.bz2 54622 RMD160 8b90d1db83835c214172d1878470e844e5acd3cc SHA1 2ac7a95cb8ffcc179d6e20457b544b1c835f9f12 SHA256 6478c2845a320566f076b228ab10e2111d77199edac9723c357625f84bf49920
+DIST calcboot-3.86.6.tar.bz2 54637 RMD160 ef390bd7fb6e8bb396de00bbca5776ec3a4d69f3 SHA1 b003f703efea96783bb242b8c6df9958125cc419 SHA256 1b052290c54463dc61e35ab82cd81b2048558b4fdc5dfc0977546279179c9b9e
 DIST calcboot-4.02.1.tar.bz2 45786 RMD160 f8abfbdb271e9af3dbc9c828b46b41891ed3ab09 SHA1 853d5e94ff4b160da5297cf1ae559c372f8bc13e SHA256 f6577eaee72b96659693d894b2b118423e716cc5cc0b47f0ff593807ad5324e0
 DIST syslinux-3.75.tar.bz2 3110916 RMD160 05e5202649bbf4c8835df41cd797cd452de65a76 SHA1 8b97a708c1dc8bcb0505fab59b143368ed25b60b SHA256 1161ef0c248b931a872b92b9fe29a1ad54be2428976f19b8d88a8aa95cb3d65f
 DIST syslinux-3.82.tar.bz2 3086896 RMD160 67f15d5436be9697065bfd52de6a864d7aed742a SHA1 e949b13e0ef016ec39f7dafacac722936756f41b SHA256 1dbbf8cfd10fc07187fa8bfede23639fc95314976730f3474cb349e8bf6c6f61
@@ -24,6 +25,7 @@ EBUILD calcboot-3.86.2.ebuild 1597 RMD160 154001af6106e6f8995df23d77775c477640cc
 EBUILD calcboot-3.86.3.ebuild 1623 RMD160 9b44e697c4b9111fa30945ca6784e6551282a8c9 SHA1 db5ef0c3dbbed5671bddda25f7887ee0e7529c7a SHA256 0aac4989f8d6063f63ecca3105b6ac829be8e8f7d8d5b568cbafaa306e6d123b
 EBUILD calcboot-3.86.4.ebuild 1623 RMD160 9b44e697c4b9111fa30945ca6784e6551282a8c9 SHA1 db5ef0c3dbbed5671bddda25f7887ee0e7529c7a SHA256 0aac4989f8d6063f63ecca3105b6ac829be8e8f7d8d5b568cbafaa306e6d123b
 EBUILD calcboot-3.86.5.ebuild 1623 RMD160 9b44e697c4b9111fa30945ca6784e6551282a8c9 SHA1 db5ef0c3dbbed5671bddda25f7887ee0e7529c7a SHA256 0aac4989f8d6063f63ecca3105b6ac829be8e8f7d8d5b568cbafaa306e6d123b
+EBUILD calcboot-3.86.6.ebuild 1623 RMD160 9b44e697c4b9111fa30945ca6784e6551282a8c9 SHA1 db5ef0c3dbbed5671bddda25f7887ee0e7529c7a SHA256 0aac4989f8d6063f63ecca3105b6ac829be8e8f7d8d5b568cbafaa306e6d123b
 EBUILD calcboot-4.02.1.ebuild 1550 RMD160 881bd80ddb5367cb58a1d05dbf43aff647faaff0 SHA1 d3088e523d20a9e6042198adbcddb26038d7b0d0 SHA256 3187a8e754229eebc6842f41d2f1781d413491dcf08ec11bb1e4f4212602e4fd
-MISC ChangeLog 1736 RMD160 d34c58a574dcf5078ae85124c798ebb1fa6ebd15 SHA1 955e25b4ea076d7df2a716ea93c46821df8e12d0 SHA256 9ceee1774e3591fdd53770e6f3bce619bcdb0c6338dba28d9b758193d236a47e
+MISC ChangeLog 1876 RMD160 1516a83a7569da2434756836147a84178df72e3a SHA1 ca9f96e298954a306699178091142c650d2b1442 SHA256 10da85ad99c691d83fe642e03234bf5ce24211d9e7fe0880d86be896a852bb29
 MISC metadata.xml 252 RMD160 e886f2ac14de406bbadb647631df7b3de928794e SHA1 ea46203f8029e9877a5656756196cf6fa4643594 SHA256 4352693c8bde260bfcdaad19c5e9f5e116ae56492f1223d4b3c713b4c24a1997
