@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calcboot-3.86.6 (13 Dec 2011)
+
+  13 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calcboot-3.86.6.ebuild:
+  Update for bugfix
+
 *calcboot-3.86.5 (12 Dec 2011)
 
   12 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
